# test-match3

./: .gitignore  CMakeLists.txt  Makefile  README.md  REFACTORING_PLAN.md
android/: AndroidManifest.xml  android.cmake
assets/sprites/GemStonesV2/: Readme.txt
docs/: SDL3-Installation.md
ios/: Info.plist  ios.cmake
src/: BoardLogic.cpp  BoardLogic.h  BoardTypes.h  Game.cpp  Game.h  Gem.cpp  Gem.h  Grid.cpp  Grid.h  InputHandler.cpp  InputHandler.h  MathUtils.h  Renderer.cpp  Renderer.h  main.cpp
tests/: BoardLogicTests.cpp  TestHelpers.h
